[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/End.gd" type="Script" id=1]
[ext_resource path="res://assets/img/ThoughtBubble3.png" type="Texture" id=2]
[ext_resource path="res://assets/img/Rectangle-title.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/font/Montserrat-Medium.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/img/Katty 2.png" type="Texture" id=7]
[ext_resource path="res://assets/img/ThoughtBubble4.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 39
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 39
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 1024.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 77 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 60.0674
margin_top = 5.33938
margin_right = 479.067
margin_bottom = 56.3394
custom_fonts/font = SubResource( 1 )
text = "Título del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Katty2Sprite" type="Sprite" parent="."]
position = Vector2( 494.498, 553.936 )
texture = ExtResource( 7 )

[node name="ThoughtBubbleSprite" type="Sprite" parent="."]
position = Vector2( 1091.98, 436.043 )
texture = ExtResource( 2 )

[node name="BubbleTailSprite" type="Sprite" parent="ThoughtBubbleSprite"]
position = Vector2( -222.81, 41.0445 )
texture = ExtResource( 8 )

[node name="ResultLabel" type="Label" parent="ThoughtBubbleSprite"]
margin_left = -191.0
margin_top = -81.0
margin_right = 39.0
margin_bottom = -33.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "¡Resultado!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SummaryLabel" type="Label" parent="ThoughtBubbleSprite"]
margin_left = -192.0
margin_top = -29.8284
margin_right = 193.0
margin_bottom = 69.1716
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "Resumen de tu resultado"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishButton" type="Button" parent="."]
margin_left = 1087.93
margin_top = 900.165
margin_right = 1320.93
margin_bottom = 952.165
theme = ExtResource( 5 )
text = "FINALIZAR"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="FinishButton" to="." method="_on_FinishButton_pressed"]
